[package]
name = "commanductui"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Declarative, command-driven Win32 UI toolkit powering SourcePacker."

[dependencies]
log = "0.4.28"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_RichEdit",
    "Win32_Graphics_Dwm",
] }
